Change submission length to 1 page

--- a/assets/author_templates/hraim_2024.tex
+++ b/assets/author_templates/hraim_2024.tex
@@ -92,10 +92,8 @@ Please read the instructions below carefully and follow them faithfully.
 \subsection{Style}
 
 
-abstracts to be submitted to HRAIM 2024 must be prepared according to the
-instructions presented here. abstracts are recommended to have at most \textbf{two pages},
-including figures. Additional pages \emph{containing only acknowledgments and
-references} are allowed.
+Abstracts to be submitted to HRAIM 2024 must be prepared according to the
+instructions presented here. We recommend that submitted extended abstracts have \textbf{one page}. However, you are allowed to use up to a maximum of two pages. You are allowed to use an unlimited amount of space for bibliography and appendices.
 
 
 Authors are required to use the HRAIM \LaTeX{} style files obtainable at the
