Add word instructions and improve LaTeX template

--- a/assets/author_templates/hraim_2024.tex
+++ b/assets/author_templates/hraim_2024.tex
@@ -86,7 +86,7 @@
 \section{Submission of abstracts to HRAIM 2024}
 
 
-Please read the instructions below carefully and follow them faithfully.
+Please follow the instructions below.
 
 
 \subsection{Style}
@@ -96,10 +96,9 @@ Abstracts to be submitted to HRAIM 2024 must be prepared according to the
 instructions presented here. We recommend that submitted extended abstracts have \textbf{one page}. However, you are allowed to use up to a maximum of two pages. You are allowed to use an unlimited amount of space for bibliography and appendices.
 
 
-Authors are required to use the HRAIM \LaTeX{} style files obtainable at the
+Authors who use \LaTeX{} are required to use the HRAIM \LaTeX{} style files obtainable at the
 HRAIM website as indicated below. Please make sure you use the current files
-and not previous versions. Tweaking the style files may be grounds for
-rejection.
+and not previous versions.
 
 
 \subsection{Retrieval of style files}
@@ -111,7 +110,7 @@ the World Wide Web at
   \url{https://www.harms-risks-ai-military.org/}
 \end{center}
 The file \verb+hraim_2024.pdf+ contains these instructions and illustrates the
-various formatting requirements your HRAIM abstract must satisfy.
+various formatting suggestions for your HRAIM abstract.
 
 
 The only supported style file for HRAIM 2024 is \verb+hraim_2024.sty+,
@@ -134,12 +133,11 @@ abstracts accepted to HRAIM.
 
 At submission time, please omit the \verb+final+ and \verb+preprint+
 options. This will anonymize your submission and add line numbers to aid
-review. Please do \emph{not} refer to these line numbers in your abstract as they
-will be removed during generation of camera-ready copies.
+review. Please do \emph{not} refer to these line numbers in your abstract.
 
 
 The file \verb+hraim_2024.tex+ may be used as a ``shell'' for writing your
-abstract. All you have to do is replace the author, title, abstract, and text of
+abstract. All you have to do is replace the author, title, and text of
 the abstract with your own.
 
 
